--- a/src/i18n/locales/ar/footer.json
+++ b/src/i18n/locales/ar/footer.json
@@ -1,13 +1,9 @@
 {
     "rights": "جميع الحقوق محفوظة",
-    "links": {
-        "privacy": "سياسة الخصوصية",
-        "terms": "الشروط والأحكام"
-    },
-    "brandAlt": "مزاد عربيتى – منصة مزادات السيارات",
+    "brandAlt": "Brmja Tech – شركة تطوير برمجيات",
     "about": {
-        "title": "عن مزاد عربيتى",
-        "description": "مزاد عربيتى منصة إلكترونية متخصصة في مزادات السيارات، تتيح البيع والشراء من خلال مزايدات مباشرة، شفافة، وبأسعار حقيقية في بيئة آمنة وسهلة الاستخدام."
+        "title": "عن Brmja Tech",
+        "description": "Brmja Tech شركة متخصصة في تطوير البرمجيات وحلول الويب، تقدم منتجات رقمية حديثة تعتمد على أفضل الممارسات التقنية وتجربة المستخدم."
     },
     "links": {
         "title": "روابط هامة",
@@ -19,9 +15,11 @@
     "contact": {
         "title": "تواصل معنا",
         "phone": "01000000000",
-        "email": "support@mazadarabity.com",
+        "email": "support@brmjatech.com",
         "location": "القاهرة – مصر"
     },
-    "copyright": "© 2025 مزاد عربيتى – جميع الحقوق محفوظة",
-    "scrollTop": "العودة لأعلى الصفحة"
+    "copyright": "© 2025 Brmja Tech – جميع الحقوق محفوظة",
+    "scrollTop": "العودة لأعلى الصفحة",
+    "devCopyright": "© 2025 Brmja Tech – جميع الحقوق محفوظة",
+    "devAlt": "Brmja Tech – شركة تطوير برمجيات"
 }
