--- a/src/i18n/locales/en/footer.json
+++ b/src/i18n/locales/en/footer.json
@@ -1,13 +1,9 @@
 {
     "rights": "All rights reserved",
-    "links": {
-        "privacy": "Privacy Policy",
-        "terms": "Terms & Conditions"
-    },
-    "brandAlt": "My Car Auction – Car Auction Platform",
+    "brandAlt": "Brmja Tech – Software Development Company",
     "about": {
-        "title": "About My Car Auction",
-        "description": "My Car Auction is a digital platform specialized in car auctions, enabling transparent and real-time buying and selling in a secure and user-friendly environment."
+        "title": "About Brmja Tech",
+        "description": "Brmja Tech is a software development company providing modern web solutions and digital products built with best engineering practices and user experience."
     },
     "links": {
         "title": "Quick Links",
@@ -19,9 +15,11 @@
     "contact": {
         "title": "Contact Us",
         "phone": "+20 100 000 0000",
-        "email": "support@mycarauction.com",
+        "email": "support@brmjatech.com",
         "location": "Cairo, Egypt"
     },
-    "copyright": "© 2025 My Car Auction – All rights reserved",
-    "scrollTop": "Back to top"
+    "copyright": "© 2025 Brmja Tech. All rights reserved",
+    "scrollTop": "Back to top",
+    "devCopyright": "© 2025 Brmja Tech. All rights reserved",
+    "devAlt": "Brmja Tech – Software Development Company"
 }
